# ShellMQ

./: README.md  client.py  install.sh  server.py  tes.ph  web_client.py
Python/: requirements.txt  server.py  web_client.py
server_c++/: CMakeLists.txt  README.md  install.sh  server.cpp
